SFDCProject/src/objects/Market_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Current_No_Of_Leads_Install__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current No of Leads (Install)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_No_Of_Leads_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current No of Leads (Sales)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Partner_age_distribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Install Partner %age distribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Market Assignments</relationshipLabel>
        <relationshipName>Market_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Performance_Adder__c</fullName>
        <defaultValue>0.000</defaultValue>
        <label>Partner Performance Adder</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Partner, Company, Channel Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Assignments</relationshipLabel>
        <relationshipName>Market_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_age_distribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Partner %age distribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Select_All_Zipcodes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box to select all zipcodes associated with that utility</description>
        <label>All Zip Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_of_adders__c</fullName>
        <formula>Partner_Performance_Adder__c + Sunrun_Fee_Adder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of adders</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunrun_Fee_Adder__c</fullName>
        <defaultValue>0.000</defaultValue>
        <label>Sunrun Fee Adder</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <controllingField>Utility_Company__c</controllingField>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Alameda Municipal Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Arizona Public Service (APS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Salt River Project Power (SRP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson Electric Power (TEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Anaheim Public Utilities (APU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Banning Power (BPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Burbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Colton Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Lodi Electric Utility Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles Dept of Water &amp; Power  (LADWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Modesto Irrigation District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Pacific Gas &amp; Electric (PG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Pasadena Water and Power (PWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Riverside Public Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Roseville Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento Municipal Utility District (SMUD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego Gas &amp; Electric (SDG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Southern California Edison (SCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choptank Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Xcel Energy (XCEL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Connecticut Light &amp; Power Co (CL&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - United Illuminating Co (United Illuminating)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Potomac Electric Power Company (PEPCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eversource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaiian Electric Company (HECO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaii Electric Light Company (HELCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Kauai Island Utility Cooperative (KIUC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Maui Electric Company (MECO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imperial Irrigation District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurens Electric</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zipcodes__c</fullName>
        <label>Zip Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Market Assignment</label>
    <listViews>
        <fullName>AEE</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>AEE Solar</value>
        </filters>
        <label>AEE</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AGR_Group_Nevada</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Partner__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Role__c</columns>
        <columns>Territory__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Sum_of_adders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>AGR Group Nevada</value>
        </filters>
        <label>AGR Group Nevada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Select_All_Zipcodes__c</columns>
        <columns>Zipcodes__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Select_All_Zipcodes__c</columns>
        <columns>Zipcodes__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bland</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <columns>Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Bland</value>
        </filters>
        <label>Bland</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Boston_Solar</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Partner__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Role__c</columns>
        <columns>Territory__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Sum_of_adders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Boston</value>
        </filters>
        <label>Boston Solar</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brightcurrent</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Brightcurrent</value>
        </filters>
        <label>Brightcurrent</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Castle_Energy_LLC</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Partner__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Role__c</columns>
        <columns>Territory__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Sum_of_adders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>equals</operation>
            <value>&quot;Castle Energy, LLC&quot;</value>
        </filters>
        <label>Castle Energy, LLC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Clean_Solar</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>equals</operation>
            <value>Clean Solar</value>
        </filters>
        <label>Clean Solar</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClearSolar_CA_Inc</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <columns>Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>ClearSolar</value>
        </filters>
        <label>ClearSolar, CA, Inc.</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Clear_Link_Technologies</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Clear Link Technologies</value>
        </filters>
        <label>Clear Link Technologies</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DC_solar_integrators</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <columns>Partner__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>DC solar integrators</value>
        </filters>
        <label>DC solar integrators</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fluent</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Fluent</value>
        </filters>
        <label>Fluent</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Four_Phase_Energy_Corporation</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Role__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <columns>Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Four Phase Energy Corporation</value>
        </filters>
        <label>Four Phase Energy Corporation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Generation_Sun</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Role__c</columns>
        <columns>Sunrun_Fee_Adder__c</columns>
        <columns>Partner_Performance_Adder__c</columns>
        <columns>Sales_Partner_age_distribution__c</columns>
        <columns>Install_Partner_age_distribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner__c</field>
            <operation>contains</operation>
            <value>Generation Sun</value>
        </filters>
        <label>Generation Sun</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Market Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Current_number_of_Leads_Install</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Current_No_Of_Leads_Install__c &lt;0, ISNULL(Current_No_Of_Leads_Install__c))</errorConditionFormula>
        <errorDisplayField>Current_No_Of_Leads_Install__c</errorDisplayField>
        <errorMessage>Please enter zero or positive whole integer in Current Number of Leads (Install)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_number_of_Leads_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Current_No_Of_Leads_Sales__c &lt;0, ISNULL(Current_No_Of_Leads_Sales__c))</errorConditionFormula>
        <errorDisplayField>Current_No_Of_Leads_Sales__c</errorDisplayField>
        <errorMessage>Please enter zero or positive whole integer in Current Number of Leads (Sales)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>End Date can not be less than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Instal_Partner_Negative_or_more_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Install_Partner_age_distribution__c &gt;1,Install_Partner_age_distribution__c &lt;0)</errorConditionFormula>
        <errorMessage>Install Partner %age must be between 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Install_Partner_Distribution</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Install_Partner_age_distribution__c &lt;0, ISNULL(Install_Partner_age_distribution__c))</errorConditionFormula>
        <errorDisplayField>Install_Partner_age_distribution__c</errorDisplayField>
        <errorMessage>You can not have Install Partner % Distribution Blank. Enter 0% or higher.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Partner_Distribution</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Sales_Partner_age_distribution__c &lt;0, ISNULL(Sales_Partner_age_distribution__c))</errorConditionFormula>
        <errorDisplayField>Sales_Partner_age_distribution__c</errorDisplayField>
        <errorMessage>You can not have Sales Partner % Distribution Blank. Enter 0% or higher.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Partner_Negative_or_more_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Sales_Partner_age_distribution__c &gt;1,Sales_Partner_age_distribution__c &lt;0)</errorConditionFormula>
        <errorMessage>Sales Partner %age must be between 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_All_Zipcodes</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Select_All_Zipcodes__c = true,  NOT(ISBLANK(Zipcodes__c)) )</errorConditionFormula>
        <errorDisplayField>Select_All_Zipcodes__c</errorDisplayField>
        <errorMessage>Can not enter zipcodes when check box is checked</errorMessage>
    </validationRules>
</CustomObject>